# eiklab-api

./: .gitignore  Cargo.toml
scripts/: README.md  convert.py  llama_download.sh
src/: error.rs  main.rs
src/chat/: mod.rs
src/named_entity_recognition/: mod.rs  ner.rs
src/sentiment/: classifier.rs  mod.rs
