[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert", features = [
  "download-libtorch",
  "default",
], default-features = false }

# parking_lot = "0.12.1"
# llm = "0.1.1"
poem = { version = "1", features = ["anyhow"], default-features = false }
poem-openapi = { version = "3", features = ["uuid"], default-features = false }
thiserror = "1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
], default-features = false }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"], default-features = false }
